--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: rmed
 Type: Package
-Title: What the Package Does in One 'Title Case' Line
+Title: Fast Siegel Estimator and Rank Distance
 Version: 1.0
 Date: 2019-05-01
-Author: Your Name
-Maintainer: Your Name <your@email.com>
+Author: Frederik Tiedemann
+Maintainer: Frederik Tiedemann <fj.tiedemann@googlemail.com>
 Description: One paragraph description of what the package does as one or more full sentences.
 License: GPL (>= 2)
 Imports: Rcpp (>= 1.0.0)
